GemComboFinder can analyze unique gems